gramatika.txt
source -> defs .

defs -> def defs2 .
defs2 -> ';' def defs2 .
defs2 -> .

def -> type_def .
def -> fun_def .
def -> var_def .

type_def -> typ id ':' type .
type -> id .
type -> logical .
type -> integer .
type -> string .
type -> arr '['int_const']' type .

fun_def -> fun id '('params')' ':' type '=' expr .

params -> param params2 .
params2 -> ',' param params2 .
params2 -> .

param -> id ':' type .

expr -> logical_ior_expr expr2 .
expr2 -> .
expr2 -> '{' WHERE defs '}' .

logical_ior_expr -> logical_and_expr logical_ior_expr2 .
logical_ior_expr2 -> '|' logical_and_expr logical_ior_expr2 .
logical_ior_expr2 -> .

logical_and_expr -> compare_expr logical_and_expr2 .
logical_and_expr2 -> '&' compare_expr logical_and_expr2 .
logical_and_expr2 -> .

compare_expr -> add_expr compare_expr2 .
compare_expr2 -> '==' add_expr .
compare_expr2 -> '!=' add_expr .
compare_expr2 -> '<=' add_expr .
compare_expr2 -> '>=' add_expr .
compare_expr2 -> '<' add_expr .
compare_expr2 -> '>' add_expr .
compare_expr2 -> .

add_expr -> mul_expr add_expr2 .
add_expr2 -> '+' mul_expr add_expr2 .
add_expr2 -> '-' mul_expr add_expr2 .
add_expr2 -> .

mul_expr -> pre_expr mul_expr2 .
mul_expr2 -> '*' pre_expr mul_expr2 .
mul_expr2 -> '/' pre_expr mul_expr2 .
mul_expr2 -> '%' pre_expr mul_expr2 .
mul_expr2 -> .

pre_expr -> '+'pre_expr .
pre_expr -> '-'pre_expr .
pre_expr -> '!'pre_expr .
pre_expr -> post_expr .

post_expr -> atom_expr post_expr2 .
post_expr2 -> '[' expr ']' post_expr2 .
post_expr2 -> .

atom_expr -> log_constant .
atom_expr -> int_constant .
atom_expr -> str_constant .
atom_expr -> id atom_expr2 .
atom_expr2 -> .
atom_expr2 -> '(' exprs ')' .


atom_expr -> '{' atom_expr3 .
atom_expr3 -> if expr then expr atom_expr4 .
atom_expr4 -> '}' .
atom_expr4 -> else expr '}' .
atom_expr3 -> while expr ':' expr '}' .
atom_expr3 -> for id '=' expr ',' expr ',' expr ':' expr '}' .
atom_expr3 -> expr '=' expr '}' .

atom_expr -> '(' exprs ')' .

exprs -> expr exprs2 .
exprs2 -> ',' expr exprs2 .
exprs2 -> .

var_def -> var id ':' type .
